--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,61 +1,66 @@
-@import url("https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700");
-@import "reset";
-@import "homepage";
-@import "mainImageCarousel";
-@import "selectionDetailsPage";
-@import "carouselSelection";
-@import "searchResults";
-@import "MiddleNavigation";
-@import "actorProfile";
-@import "loadingComp";
-@import "footer";
+@import url('https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700');
+@import 'reset';
+@import 'homepage';
+@import 'mainImageCarousel';
+@import 'selectionDetailsPage';
+@import 'carouselSelection';
+@import 'searchResults';
+@import 'MiddleNavigation';
+@import 'actorProfile';
+@import 'loadingComp';
+@import 'footer';
 
 * {
-  box-sizing: border-box;
+	box-sizing: border-box;
 }
 body {
-  font-family: "Roboto", sans-serif;
-  color: white;
-  background: black;
+	font-family: 'Roboto', sans-serif;
+	color: white;
+	background: black;
+}
+input {
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance: none;
 }
 .home-page {
-  transition: all 5s ease-in-out;
+	transition: all 5s ease-in-out;
 }
 .loading-screen1 {
-  background: red;
-  transition: all 5s ease-in-out;
-  height: 100vh;
+	background: red;
+	transition: all 5s ease-in-out;
+	height: 100vh;
 }
 h1 {
-  font-weight: 100;
-  font-size: 50px;
+	font-weight: 100;
+	font-size: 50px;
 }
 a {
-  text-decoration: none;
+	text-decoration: none;
 }
 .logo {
-  background: black;
-  text-align: right;
-  width: 100%;
-  z-index: 2;
-  padding: 10px;
-  img {
-    width: 200px;
-    @media only screen and (max-width: 767px) {
-      width: 150px;
-    }
-  }
+	background: black;
+	text-align: right;
+	width: 100%;
+	z-index: 2;
+	padding: 10px;
+	img {
+		width: 200px;
+		@media only screen and (max-width: 767px) {
+			width: 150px;
+		}
+	}
 }
 
 #home {
-  @media only screen and (max-width: 767px) {
-    .img {
-      background-size: 100% !important;
-      background-repeat: no-repeat;
-    }
-  }
-  .video-container {
-    padding-top: 5rem;
-    background: linear-gradient(135deg, #280684 0%, #21bdb8 100%);
-  }
+	@media only screen and (max-width: 767px) {
+		.img {
+			background-size: 100% !important;
+			background-repeat: no-repeat;
+		}
+	}
+	.video-container {
+		padding-top: 5rem;
+		background: linear-gradient(135deg, #280684 0%, #21bdb8 100%);
+	}
 }
